# sws-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
sws/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
